<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:layout_margin="8dp"
        android:background="@color/white"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/my"
            android:clickable="true"/>
        <TextView
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about"/>
        <TextView
            android:layout_width="300dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about1"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about2"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about3"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about4"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about5"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about6"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about7"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about8"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/about9"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:textSize="15dp"
            android:text="@string/about10"
            android:textColor="#3f51b5"/>



    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
