<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.daihuobangv10.Search_Activity">


    <android.support.v7.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout_search"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/image_search_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/imate_back"
                    android:padding="12dp"
                    android:src="@mipmap/ic_arrow_back"/>

                <AutoCompleteTextView
                    android:id="@+id/edit_text_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#fff"
                    android:gravity="center_vertical"
                    android:hint="@string/edit_text_search"
                    android:imeOptions="actionSearch"
                    android:inputType="textCapWords"
                    android:paddingLeft="12dp"
                    android:paddingRight="8dp"
                    android:singleLine="true"/>

                <ImageButton
                    android:id="@+id/btn_startsearch"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/voice_cancel"
                    android:padding="12dp"
                    android:src="@drawable/ic_startbutton"/>


            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
