<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/layout_order_release"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--标题栏-->
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:fitsSystemWindows="true">
            <android.support.v7.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbar_order_release"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:popupTheme="@style/AppTheme.PopupOverlay">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>

        <!--发布运力详情页面-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_margin="10dp"
            android:elevation="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:text="发布运力"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_margin="25dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp">
                <EditText
                    android:id="@+id/et_start_OrderRelease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="出发点"
                    android:textSize="15sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp">
                <EditText
                    android:id="@+id/et_end_OrderRelease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="目的地"
                    android:textSize="15sp"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/et_starttime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="开始时间"
                        android:textSize="15sp"
                        android:editable="false"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_choosetime"
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="选择"
                    android:textColor="@color/colorPrimary"
                    android:background="@color/white"
                    android:textSize="15sp"
                    android:gravity="center"
                    style="?android:attr/borderlessButtonStyle"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="18dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 车辆剩余容积:"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:prompt="@string/kinds"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="18dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 可接受额外里程:"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    android:prompt="@string/time"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="18dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 可接受额外时间:"
                    android:layout_gravity="center_vertical"
                    android:textSize="15sp"/>
                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:spinnerMode="dropdown"
                    android:prompt="@string/pay"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_order_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimary"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="确定发布"
                android:elevation="4dp"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>